syntax = "proto3";

package proto;

import "geo.proto";
import "google/protobuf/timestamp.proto";

option java_package = "com.bicsi.scm.models.proto";
option java_outer_classname = "Messages";

message GenericClientMessage {
    enum Type { POSITION_UPDATE = 0; }

    Type type = 1;
    google.protobuf.Timestamp timestamp = 2;
    string sender_id = 3;

    PositionUpdateMessage positionUpdate = 100;
}

message PositionUpdateMessage {
    Position position = 1;
}